deploy/examples/microk8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder
  labels:
    app.kubernetes.io/name: coder
    environment: development
